--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,18 +50,18 @@ variables:
     - moodle-plugin-ci grunt
     - moodle-plugin-ci phpdoc
     - moodle-plugin-ci phpunit
-    - moodle-plugin-ci behat
+    - moodle-plugin-ci behat --profile chrome
 
 code_checker_pgsql:
   extends: .postgres
   <<: *job_definition
-  image: amcdev/moodle-plugin-ci:7.3-docker-node-14.15.0
+  image: amcdev/moodle-plugin-ci:7.4
   variables:
-    MOODLE_BRANCH: "MOODLE_39_STABLE"
+    MOODLE_BRANCH: "MOODLE_311_STABLE"
 
 code_checker_mariadb:
   extends: .mariadb
   <<: *job_definition
-  image: amcdev/moodle-plugin-ci:7.3-docker-node-14.15.0
+  image: amcdev/moodle-plugin-ci:7.4
   variables:
-    MOODLE_BRANCH: "MOODLE_39_STABLE"
+    MOODLE_BRANCH: "MOODLE_311_STABLE"
